--- a/Emergency_Ventilator.ioc
+++ b/Emergency_Ventilator.ioc
@@ -65,6 +65,7 @@ SH.ADCx_IN3.0=ADC1_IN3,IN3
 Mcu.IPNb=13
 ProjectManager.PreviousToolchain=
 RCC.APB2TimFreq_Value=12000000
+TIM3.Period=100
 PB6.Signal=GPXTI6
 Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
 ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_2
@@ -77,7 +78,7 @@ Mcu.Pin6=PA0-WKUP
 Mcu.Pin7=PA1
 Mcu.Pin8=PA2
 Mcu.Pin9=PA3
-Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_WORD
 RCC.AHBFreq_Value=48000000
 PB13.Locked=true
 Mcu.Pin0=PD0-OSC_IN
@@ -108,6 +109,7 @@ PA1.GPIOParameters=GPIO_Label
 ProjectManager.BackupPrevious=false
 PC4.GPIO_Label=LCD_RS
 PA14.Mode=Serial_Wire
+TIM3.Prescaler=23
 PB1.GPIO_Label=THRESHOLD
 Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
 TIM1.DeadTime=5
@@ -165,6 +167,7 @@ PC2.GPIO_Label=LCD_DB6
 PA8.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 ProjectManager.CustomerFirmwarePackage=
 PC4.GPIOParameters=GPIO_Speed,GPIO_Label
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
 ADC1.Rank-4\#ChannelRegularConversion=3
 ADC2.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_9
 PA3.Signal=ADCx_IN3
@@ -175,12 +178,12 @@ SH.GPXTI5.0=GPIO_EXTI5
 ProjectManager.ProjectFileName=Emergency_Ventilator.ioc
 Dma.ADC1.0.Instance=DMA1_Channel1
 PB8.GPIOParameters=GPIO_PuPd,GPIO_Label
-TIM3.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
+TIM3.CounterMode=TIM_COUNTERMODE_UP
 PD1-OSC_OUT.Mode=HSE-External-Oscillator
 PB9.GPIO_Label=ALARM
 ADC1.Channel-4\#ChannelRegularConversion=ADC_CHANNEL_4
 Mcu.PinsNb=37
-TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 ProjectManager.NoMain=false
 USB_DEVICE.VirtualModeFS=Cdc_FS
 SH.ADCx_IN6.0=ADC2_IN6,IN6
@@ -215,14 +218,13 @@ PA13.Signal=SYS_JTMS-SWDIO
 SH.GPXTI6.ConfNb=1
 PB8.GPIO_Label=SILENCE
 SH.S_TIM2_CH2.0=TIM2_CH2,Encoder_Interface
-Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
 PA8.GPIO_Label=MOTOR_P
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1 CH1N
 PB11.Mode=I2C
 ADC2.ContinuousConvMode=ENABLE
 VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 ProjectManager.TargetToolchain=Makefile
-VP_TIM3_VS_no_output1.Signal=TIM3_VS_no_output1
 TIM4.IPParameters=Channel-PWM Generation4 CH4
 SH.ADCx_IN7.0=ADC2_IN7,IN7
 Dma.ADC1.0.Mode=DMA_CIRCULAR
@@ -238,22 +240,21 @@ PB5.Locked=true
 PB9.Locked=true
 PC2.Locked=true
 RCC.USBFreq_Value=48000000
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 PA1.Signal=S_TIM2_CH2
 PD0-OSC_IN.Mode=HSE-External-Oscillator
 PB10.Signal=I2C2_SCL
-TIM3.OC1Preload=ENABLE
 PA5.Signal=ADCx_IN5
 board=custom
-VP_TIM3_VS_no_output1.Mode=Output Compare1 No Output
 TIM1.OCNPolarity_1=TIM_OCNPOLARITY_HIGH
 ProjectManager.LastFirmware=true
 ADC2.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_8
+NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 TIM1.OCNIdleState_1=TIM_OCNIDLESTATE_RESET
 RCC.VCOOutput2Freq_Value=8000000
 Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 RCC.APB2Freq_Value=6000000
 MxCube.Version=5.6.0
-TIM3.OCMode_1=TIM_OCMODE_FORCED_ACTIVE
 Mcu.Pin35=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin36=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 SH.ADCx_IN2.ConfNb=1
@@ -264,8 +265,8 @@ PC1.GPIO_Label=LCD_DB5
 PA1.GPIO_Label=ENCODER_B
 VP_SYS_VS_Systick.Mode=SysTick
 Mcu.Pin33=VP_TIM1_VS_ClockSourceINT
-TIM3.IPParameters=Channel-Output Compare1 No Output,AutoReloadPreload,TIM_MasterOutputTrigger,OCMode_1,OC1Preload
-Mcu.Pin34=VP_TIM3_VS_no_output1
+TIM3.IPParameters=Prescaler,Period,AutoReloadPreload,CounterMode
+Mcu.Pin34=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin31=PB9
 SH.ADCx_IN4.0=ADC1_IN4,IN4
 Mcu.Pin32=VP_SYS_VS_Systick
@@ -335,7 +336,7 @@ Mcu.Pin17=PB1
 Mcu.Pin18=PB10
 SH.ADCx_IN5.0=ADC1_IN5,IN5
 VP_TIM4_VS_ClockSourceINT.Mode=Internal
-NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+NVIC.PriorityGroup=NVIC_PRIORITYGROUP_2
 ADC1.NbrOfConversionFlag=1
 Mcu.Pin11=PA5
 Mcu.Pin12=PA6
@@ -346,7 +347,6 @@ PB8.Signal=GPXTI8
 PC3.GPIO_Label=LCD_DB7
 SH.ADCx_IN5.ConfNb=1
 NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-TIM3.TIM_MasterOutputTrigger=TIM_TRGO_OC1REF
 PD2.Signal=GPIO_Output
 RCC.APB1Freq_Value=12000000
 PB0.Signal=ADCx_IN8
