--- a/Emergency_Ventilator.ioc
+++ b/Emergency_Ventilator.ioc
@@ -3,17 +3,19 @@ Mcu.Family=STM32F1
 ProjectManager.MainLocation=Core/Src
 RCC.MCOFreq_Value=48000000
 PB13.GPIOParameters=GPIO_Speed,GPIO_Label
-ADC2.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T3_TRGO
+ADC2.ExternalTrigConv=ADC_SOFTWARE_START
 USB_DEVICE.CLASS_NAME_FS=CDC
+VP_TIM1_VS_OPM.Mode=OPM_bit
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F103RCTx
 ADC2.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_239CYCLES_5
 PB10.Mode=I2C
 ADC1.ContinuousConvMode=ENABLE
 ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_6
-TIM1.Pulse-PWM\ Generation1\ CH1\ CH1N=50
+TIM1.Pulse-PWM\ Generation1\ CH1\ CH1N=600
 TIM1.IPParameters=Channel-PWM Generation1 CH1 CH1N,ClockDivision,AutomaticOutput,DeadTime,OCNPolarity_1,OCNIdleState_1,Pulse-PWM Generation1 CH1 CH1N,Period,Prescaler
 SH.ADCx_IN2.0=ADC1_IN2,IN2
+VP_TIM4_VS_OPM.Mode=OPM_bit
 RCC.PLLCLKFreq_Value=48000000
 PC5.Locked=true
 PB6.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
@@ -23,10 +25,11 @@ PC0.GPIO_Label=LCD_DB4
 PC3.Locked=true
 PA11.Mode=Device
 PA3.GPIOParameters=GPIO_Label
-RCC.ADCFreqValue=1000000
+RCC.ADCFreqValue=2000000
 PA6.GPIO_Label=BPM
 PB0.GPIO_Label=IE
 PB6.GPIO_Label=MODE
+TIM2.EncoderMode=TIM_ENCODERMODE_TI12
 PD2.Locked=true
 PD2.GPIOParameters=GPIO_Label
 SH.S_TIM1_CH1.ConfNb=1
@@ -53,7 +56,7 @@ RCC.SDIOHCLKDiv2FreqValue=24000000
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
 PA12.Signal=USB_DP
-TIM1.Prescaler=2
+TIM1.Prescaler=0
 Mcu.UserConstants=
 ADC1.Channel-5\#ChannelRegularConversion=ADC_CHANNEL_5
 PC1.GPIOParameters=GPIO_Label
@@ -63,9 +66,10 @@ RCC.SDIOFreq_Value=48000000
 RCC.HCLKFreq_Value=48000000
 SH.ADCx_IN3.0=ADC1_IN3,IN3
 Mcu.IPNb=13
+TIM2.IPParameters=EncoderMode
 ProjectManager.PreviousToolchain=
-RCC.APB2TimFreq_Value=12000000
-TIM3.Period=100
+RCC.APB2TimFreq_Value=24000000
+TIM3.Period=99
 PB6.Signal=GPXTI6
 Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
 ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_2
@@ -94,7 +98,7 @@ NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA8.Locked=true
 Mcu.IP10=TIM4
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.SysTick_IRQn=true\:0\:1\:true\:false\:true\:false\:false
 Mcu.IP12=USB_DEVICE
 RCC.PLLMUL=RCC_PLL_MUL6
 Mcu.IP11=USB
@@ -109,10 +113,10 @@ PA1.GPIOParameters=GPIO_Label
 ProjectManager.BackupPrevious=false
 PC4.GPIO_Label=LCD_RS
 PA14.Mode=Serial_Wire
-TIM3.Prescaler=23
+TIM3.Prescaler=11
 PB1.GPIO_Label=THRESHOLD
 Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
-TIM1.DeadTime=5
+TIM1.DeadTime=10
 File.Version=6
 SH.ADCx_IN8.0=ADC2_IN8,IN8
 PB7.Signal=GPXTI7
@@ -121,6 +125,7 @@ PB8.Locked=true
 SH.ADCx_IN4.ConfNb=1
 PB6.Locked=true
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+TIM4.Period=1
 SH.ADCx_IN6.ConfNb=1
 Dma.RequestsNb=1
 PB6.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
@@ -133,6 +138,7 @@ Mcu.Package=LQFP64
 PB9.Signal=S_TIM4_CH4
 PB1.Signal=ADCx_IN9
 PA6.Signal=ADCx_IN6
+ADC1.EnableInjectedConversion=DISABLE
 RCC.I2S2Freq_Value=48000000
 SH.GPXTI8.0=GPIO_EXTI8
 PA14.Locked=true
@@ -146,7 +152,7 @@ VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_239CYCLES_5
 PA5.GPIOParameters=GPIO_Label
 SH.ADCx_IN9.0=ADC2_IN9,IN9
-RCC.APB2CLKDivider=RCC_HCLK_DIV8
+RCC.APB2CLKDivider=RCC_HCLK_DIV4
 PB9.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 ADC2.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_239CYCLES_5
 PB5.GPIO_Label=CONFIRM
@@ -157,10 +163,9 @@ PC4.Locked=true
 ADC2.Rank-2\#ChannelRegularConversion=3
 PC5.Signal=GPIO_Output
 SH.ADCx_IN9.ConfNb=1
-TIM1.Period=100
+TIM1.Period=1199
 PB13.Mode=PWM Generation1 CH1 CH1N
 ADC2.Rank-0\#ChannelRegularConversion=1
-TIM4.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 Dma.Request0=ADC1
 PA4.GPIO_Label=MOTOR_RIS
 PC2.GPIO_Label=LCD_DB6
@@ -168,6 +173,7 @@ PA8.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 ProjectManager.CustomerFirmwarePackage=
 PC4.GPIOParameters=GPIO_Speed,GPIO_Label
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM4_VS_OPM.Signal=TIM4_VS_OPM
 ADC1.Rank-4\#ChannelRegularConversion=3
 ADC2.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_9
 PA3.Signal=ADCx_IN3
@@ -176,25 +182,27 @@ PA6.GPIOParameters=GPIO_Label
 PB7.GPIO_PuPd=GPIO_PULLUP
 SH.GPXTI5.0=GPIO_EXTI5
 ProjectManager.ProjectFileName=Emergency_Ventilator.ioc
+TIM4.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 Dma.ADC1.0.Instance=DMA1_Channel1
 PB8.GPIOParameters=GPIO_PuPd,GPIO_Label
 TIM3.CounterMode=TIM_COUNTERMODE_UP
 PD1-OSC_OUT.Mode=HSE-External-Oscillator
 PB9.GPIO_Label=ALARM
 ADC1.Channel-4\#ChannelRegularConversion=ADC_CHANNEL_4
-Mcu.PinsNb=37
+Mcu.PinsNb=39
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 ProjectManager.NoMain=false
 USB_DEVICE.VirtualModeFS=Cdc_FS
 SH.ADCx_IN6.0=ADC2_IN6,IN6
-ADC1.IPParameters=Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,NbrOfConversionFlag,master,ContinuousConvMode,NbrOfConversion,ExternalTrigConv,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion
-SH.S_TIM4_CH4.0=TIM4_CH4,PWM Generation4 CH4
+ADC1.IPParameters=Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,NbrOfConversionFlag,master,ContinuousConvMode,NbrOfConversion,ExternalTrigConv,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,EnableInjectedConversion
+SH.S_TIM4_CH4.0=TIM4_CH4
 ADC2.Rank-3\#ChannelRegularConversion=4
 PB6.GPIO_PuPd=GPIO_PULLUP
 PB8.GPIO_PuPd=GPIO_PULLUP
 PC2.Signal=GPIO_Output
 PC4.Signal=GPIO_Output
 ProjectManager.DefaultFWLocation=true
+VP_TIM1_VS_OPM.Signal=TIM1_VS_OPM
 TIM1.Channel-PWM\ Generation1\ CH1\ CH1N=TIM_CHANNEL_1
 PD0-OSC_IN.Signal=RCC_OSC_IN
 ProjectManager.DeletePrevious=true
@@ -208,7 +216,7 @@ RCC.FamilyName=M
 RCC.I2S3Freq_Value=48000000
 PA0-WKUP.GPIO_Label=ENCODER_A
 PA0-WKUP.Signal=S_TIM2_CH1_ETR
-TIM1.ClockDivision=TIM_CLOCKDIVISION_DIV4
+TIM1.ClockDivision=TIM_CLOCKDIVISION_DIV1
 PA0-WKUP.Locked=true
 PB9.GPIOParameters=GPIO_Speed,GPIO_Label
 RCC.ADCPresc=RCC_ADCPCLK2_DIV6
@@ -225,7 +233,7 @@ PB11.Mode=I2C
 ADC2.ContinuousConvMode=ENABLE
 VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 ProjectManager.TargetToolchain=Makefile
-TIM4.IPParameters=Channel-PWM Generation4 CH4
+TIM4.IPParameters=Period,AutoReloadPreload,Prescaler
 SH.ADCx_IN7.0=ADC2_IN7,IN7
 Dma.ADC1.0.Mode=DMA_CIRCULAR
 PB7.GPIOParameters=GPIO_PuPd,GPIO_Label
@@ -241,6 +249,7 @@ PB9.Locked=true
 PC2.Locked=true
 RCC.USBFreq_Value=48000000
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+TIM4.Prescaler=23
 PA1.Signal=S_TIM2_CH2
 PD0-OSC_IN.Mode=HSE-External-Oscillator
 PB10.Signal=I2C2_SCL
@@ -253,10 +262,12 @@ NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 TIM1.OCNIdleState_1=TIM_OCNIDLESTATE_RESET
 RCC.VCOOutput2Freq_Value=8000000
 Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-RCC.APB2Freq_Value=6000000
+RCC.APB2Freq_Value=12000000
 MxCube.Version=5.6.0
-Mcu.Pin35=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin36=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin37=VP_TIM4_VS_OPM
+Mcu.Pin38=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin35=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin36=VP_TIM4_VS_ClockSourceINT
 SH.ADCx_IN2.ConfNb=1
 PC2.GPIOParameters=GPIO_Label
 NVIC.USB_LP_CAN1_RX0_IRQn=true\:0\:0\:false\:false\:false\:false\:false
@@ -266,7 +277,7 @@ PA1.GPIO_Label=ENCODER_B
 VP_SYS_VS_Systick.Mode=SysTick
 Mcu.Pin33=VP_TIM1_VS_ClockSourceINT
 TIM3.IPParameters=Prescaler,Period,AutoReloadPreload,CounterMode
-Mcu.Pin34=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin34=VP_TIM1_VS_OPM
 Mcu.Pin31=PB9
 SH.ADCx_IN4.0=ADC1_IN4,IN4
 Mcu.Pin32=VP_SYS_VS_Systick
@@ -287,7 +298,7 @@ Mcu.Pin24=PA13
 ProjectManager.UnderRoot=false
 Mcu.Pin25=PA14
 Mcu.IP8=TIM2
-ADC1.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T3_TRGO
+ADC1.ExternalTrigConv=ADC_SOFTWARE_START
 Mcu.IP9=TIM3
 Mcu.Pin28=PB6
 Mcu.IP6=SYS
@@ -319,7 +330,7 @@ PA13.Locked=true
 ProjectManager.CompilerOptimize=6
 PA11.Signal=USB_DM
 SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Encoder_Interface
-NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+NVIC.EXTI9_5_IRQn=true\:0\:2\:true\:false\:true\:true\:false
 USB_DEVICE.APP_TX_DATA_SIZE=256
 PA14.Signal=SYS_JTCK-SWCLK
 Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
