--- a/Emergency_Ventilator.ioc
+++ b/Emergency_Ventilator.ioc
@@ -1,11 +1,10 @@
 #MicroXplorer Configuration settings - do not modify
 Mcu.Family=STM32F1
 ProjectManager.MainLocation=Core/Src
+NVIC.ADC1_2_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 RCC.MCOFreq_Value=48000000
 PB13.GPIOParameters=GPIO_Speed,GPIO_Label
 ADC2.ExternalTrigConv=ADC_SOFTWARE_START
-USB_DEVICE.CLASS_NAME_FS=CDC
-VP_TIM1_VS_OPM.Mode=OPM_bit
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F103RCTx
 ADC2.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_239CYCLES_5
@@ -15,17 +14,15 @@ ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_6
 TIM1.Pulse-PWM\ Generation1\ CH1\ CH1N=600
 TIM1.IPParameters=Channel-PWM Generation1 CH1 CH1N,ClockDivision,AutomaticOutput,DeadTime,OCNPolarity_1,OCNIdleState_1,Pulse-PWM Generation1 CH1 CH1N,Period,Prescaler
 SH.ADCx_IN2.0=ADC1_IN2,IN2
-VP_TIM4_VS_OPM.Mode=OPM_bit
 RCC.PLLCLKFreq_Value=48000000
 PC5.Locked=true
-PB6.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_TIM4_Init-TIM4-false-HAL-true,10-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,11-MX_TIM3_Init-TIM3-false-HAL-true
+PB6.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_TIM4_Init-TIM4-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true,11-MX_TIM8_Init-TIM8-false-HAL-true
 PC0.GPIOParameters=GPIO_Label
 PC0.GPIO_Label=LCD_DB4
 PC3.Locked=true
-PA11.Mode=Device
 PA3.GPIOParameters=GPIO_Label
-RCC.ADCFreqValue=2000000
+RCC.ADCFreqValue=6000000
 PA6.GPIO_Label=BPM
 PB0.GPIO_Label=IE
 PB6.GPIO_Label=MODE
@@ -36,6 +33,7 @@ SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM4_CH4.ConfNb=1
 PC1.Locked=true
 PB13.GPIO_Label=MOTOR_N
+PB7.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PB11.Signal=I2C2_SDA
 PB13.Signal=TIM1_CH1N
 PA2.GPIOParameters=GPIO_Label
@@ -55,7 +53,6 @@ Mcu.IP3=I2C2
 RCC.SDIOHCLKDiv2FreqValue=24000000
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
-PA12.Signal=USB_DP
 TIM1.Prescaler=0
 Mcu.UserConstants=
 ADC1.Channel-5\#ChannelRegularConversion=ADC_CHANNEL_5
@@ -65,7 +62,7 @@ ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_3
 RCC.SDIOFreq_Value=48000000
 RCC.HCLKFreq_Value=48000000
 SH.ADCx_IN3.0=ADC1_IN3,IN3
-Mcu.IPNb=13
+Mcu.IPNb=11
 TIM2.IPParameters=EncoderMode
 ProjectManager.PreviousToolchain=
 RCC.APB2TimFreq_Value=24000000
@@ -99,9 +96,7 @@ NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA8.Locked=true
 Mcu.IP10=TIM4
 NVIC.SysTick_IRQn=true\:0\:1\:true\:false\:true\:false\:false
-Mcu.IP12=USB_DEVICE
 RCC.PLLMUL=RCC_PLL_MUL6
-Mcu.IP11=USB
 SH.GPXTI7.0=GPIO_EXTI7
 ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.0
 PC4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
@@ -125,7 +120,7 @@ PB8.Locked=true
 SH.ADCx_IN4.ConfNb=1
 PB6.Locked=true
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-TIM4.Period=1
+TIM4.Period=0xFFFF
 SH.ADCx_IN6.ConfNb=1
 Dma.RequestsNb=1
 PB6.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
@@ -148,7 +143,6 @@ VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 SH.GPXTI5.ConfNb=1
 SH.GPXTI8.ConfNb=1
 ADC2.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_7
-VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_239CYCLES_5
 PA5.GPIOParameters=GPIO_Label
 SH.ADCx_IN9.0=ADC2_IN9,IN9
@@ -173,13 +167,13 @@ PA8.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 ProjectManager.CustomerFirmwarePackage=
 PC4.GPIOParameters=GPIO_Speed,GPIO_Label
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
-VP_TIM4_VS_OPM.Signal=TIM4_VS_OPM
 ADC1.Rank-4\#ChannelRegularConversion=3
 ADC2.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_9
 PA3.Signal=ADCx_IN3
-PB5.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PB5.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
 PA6.GPIOParameters=GPIO_Label
 PB7.GPIO_PuPd=GPIO_PULLUP
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 SH.GPXTI5.0=GPIO_EXTI5
 ProjectManager.ProjectFileName=Emergency_Ventilator.ioc
 TIM4.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
@@ -189,10 +183,9 @@ TIM3.CounterMode=TIM_COUNTERMODE_UP
 PD1-OSC_OUT.Mode=HSE-External-Oscillator
 PB9.GPIO_Label=ALARM
 ADC1.Channel-4\#ChannelRegularConversion=ADC_CHANNEL_4
-Mcu.PinsNb=39
+Mcu.PinsNb=34
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 ProjectManager.NoMain=false
-USB_DEVICE.VirtualModeFS=Cdc_FS
 SH.ADCx_IN6.0=ADC2_IN6,IN6
 ADC1.IPParameters=Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,NbrOfConversionFlag,master,ContinuousConvMode,NbrOfConversion,ExternalTrigConv,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,EnableInjectedConversion
 SH.S_TIM4_CH4.0=TIM4_CH4
@@ -202,14 +195,12 @@ PB8.GPIO_PuPd=GPIO_PULLUP
 PC2.Signal=GPIO_Output
 PC4.Signal=GPIO_Output
 ProjectManager.DefaultFWLocation=true
-VP_TIM1_VS_OPM.Signal=TIM1_VS_OPM
 TIM1.Channel-PWM\ Generation1\ CH1\ CH1N=TIM_CHANNEL_1
 PD0-OSC_IN.Signal=RCC_OSC_IN
 ProjectManager.DeletePrevious=true
 PC0.Signal=GPIO_Output
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.TimSys_Div=SYSTICK_CLKSOURCE_HCLK_DIV8
-USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,APP_TX_DATA_SIZE
 SH.S_TIM2_CH1_ETR.ConfNb=1
 ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_13CYCLES_5
 RCC.FamilyName=M
@@ -219,7 +210,6 @@ PA0-WKUP.Signal=S_TIM2_CH1_ETR
 TIM1.ClockDivision=TIM_CLOCKDIVISION_DIV1
 PA0-WKUP.Locked=true
 PB9.GPIOParameters=GPIO_Speed,GPIO_Label
-RCC.ADCPresc=RCC_ADCPCLK2_DIV6
 PC3.GPIOParameters=GPIO_Label
 SH.GPXTI6.0=GPIO_EXTI6
 PA13.Signal=SYS_JTMS-SWDIO
@@ -230,15 +220,14 @@ Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
 PA8.GPIO_Label=MOTOR_P
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1 CH1N
 PB11.Mode=I2C
-ADC2.ContinuousConvMode=ENABLE
+ADC2.ContinuousConvMode=DISABLE
 VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 ProjectManager.TargetToolchain=Makefile
 TIM4.IPParameters=Period,AutoReloadPreload,Prescaler
 SH.ADCx_IN7.0=ADC2_IN7,IN7
 Dma.ADC1.0.Mode=DMA_CIRCULAR
-PB7.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB7.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,ExternalTrigConv,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,NbrOfConversion
-VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
 PC5.GPIOParameters=GPIO_Label
 Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
 SH.S_TIM2_CH2.ConfNb=1
@@ -264,23 +253,17 @@ RCC.VCOOutput2Freq_Value=8000000
 Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 RCC.APB2Freq_Value=12000000
 MxCube.Version=5.6.0
-Mcu.Pin37=VP_TIM4_VS_OPM
-Mcu.Pin38=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
-Mcu.Pin35=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin36=VP_TIM4_VS_ClockSourceINT
 SH.ADCx_IN2.ConfNb=1
 PC2.GPIOParameters=GPIO_Label
-NVIC.USB_LP_CAN1_RX0_IRQn=true\:0\:0\:false\:false\:false\:false\:false
-Mcu.Pin30=PB8
+Mcu.Pin30=VP_SYS_VS_Systick
 PC1.GPIO_Label=LCD_DB5
 PA1.GPIO_Label=ENCODER_B
 VP_SYS_VS_Systick.Mode=SysTick
-Mcu.Pin33=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin33=VP_TIM4_VS_ClockSourceINT
 TIM3.IPParameters=Prescaler,Period,AutoReloadPreload,CounterMode
-Mcu.Pin34=VP_TIM1_VS_OPM
-Mcu.Pin31=PB9
+Mcu.Pin31=VP_TIM1_VS_ClockSourceINT
 SH.ADCx_IN4.0=ADC1_IN4,IN4
-Mcu.Pin32=VP_SYS_VS_Systick
+Mcu.Pin32=VP_TIM3_VS_ClockSourceINT
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA4.GPIOParameters=GPIO_Label
 ADC2.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_239CYCLES_5
@@ -288,50 +271,47 @@ SH.ADCx_IN8.ConfNb=1
 ADC1.NbrOfConversion=4
 PA13.Mode=Serial_Wire
 ProjectManager.FreePins=false
-RCC.IPParameters=ADCFreqValue,ADCPresc,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,I2S2Freq_Value,I2S3Freq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,SDIOFreq_Value,SDIOHCLKDiv2FreqValue,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,TimSys_Div,USBFreq_Value,VCOOutput2Freq_Value
+RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,I2S2Freq_Value,I2S3Freq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,SDIOFreq_Value,SDIOHCLKDiv2FreqValue,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,TimSys_Div,USBFreq_Value,VCOOutput2Freq_Value
 ProjectManager.AskForMigrate=true
 Mcu.Name=STM32F103R(C-D-E)Tx
-Mcu.Pin26=PD2
-Mcu.Pin27=PB5
+Mcu.Pin26=PB6
+Mcu.Pin27=PB7
 PA2.Signal=ADCx_IN2
-Mcu.Pin24=PA13
+Mcu.Pin24=PD2
 ProjectManager.UnderRoot=false
-Mcu.Pin25=PA14
+Mcu.Pin25=PB5
 Mcu.IP8=TIM2
 ADC1.ExternalTrigConv=ADC_SOFTWARE_START
 Mcu.IP9=TIM3
-Mcu.Pin28=PB6
+Mcu.Pin28=PB8
 Mcu.IP6=SYS
-Mcu.Pin29=PB7
+Mcu.Pin29=PB9
 Mcu.IP7=TIM1
 ProjectManager.CoupleFile=false
 PA4.Signal=ADCx_IN4
 RCC.SYSCLKFreq_VALUE=48000000
 PB5.Signal=GPXTI5
-Mcu.Pin22=PA11
-Mcu.Pin23=PA12
+Mcu.Pin22=PA13
+Mcu.Pin23=PA14
 RCC.TimSysFreq_Value=6000000
 PA1.Locked=true
 PA7.GPIO_Label=TIDAL
 Mcu.Pin20=PB13
 ADC1.master=1
 Mcu.Pin21=PA8
-PA12.Mode=Device
 PA5.GPIO_Label=MOTOR_LIS
 ADC1.Rank-3\#ChannelRegularConversion=2
 ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_13CYCLES_5
 ADC2.NbrOfConversionFlag=1
-NVIC.ForceEnableDMAVector=true
+NVIC.ForceEnableDMAVector=false
 KeepUserPlacement=false
 PC5.GPIO_Label=LCD_E
 PB5.GPIO_PuPd=GPIO_PULLUP
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA13.Locked=true
 ProjectManager.CompilerOptimize=6
-PA11.Signal=USB_DM
 SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Encoder_Interface
 NVIC.EXTI9_5_IRQn=true\:0\:2\:true\:false\:true\:true\:false
-USB_DEVICE.APP_TX_DATA_SIZE=256
 PA14.Signal=SYS_JTCK-SWCLK
 Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
 ProjectManager.HeapSize=0x200
@@ -361,7 +341,6 @@ NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PD2.Signal=GPIO_Output
 RCC.APB1Freq_Value=12000000
 PB0.Signal=ADCx_IN8
-USB_DEVICE.VirtualMode=Cdc
 PD0-OSC_IN.Locked=true
 PA7.GPIOParameters=GPIO_Label
 PC0.Locked=true
