--- a/Emergency_Ventilator.ioc
+++ b/Emergency_Ventilator.ioc
@@ -1,7 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
 Mcu.Family=STM32F1
 ProjectManager.MainLocation=Core/Src
-NVIC.ADC1_2_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+NVIC.ADC1_2_IRQn=true\:0\:1\:false\:false\:true\:true\:false
 RCC.MCOFreq_Value=48000000
 PB13.GPIOParameters=GPIO_Speed,GPIO_Label
 ADC2.ExternalTrigConv=ADC_SOFTWARE_START
@@ -11,26 +11,29 @@ ADC2.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_239CYCLES_5
 PB10.Mode=I2C
 ADC1.ContinuousConvMode=ENABLE
 ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_6
+PC12.Locked=true
 TIM1.Pulse-PWM\ Generation1\ CH1\ CH1N=600
 TIM1.IPParameters=Channel-PWM Generation1 CH1 CH1N,ClockDivision,AutomaticOutput,DeadTime,OCNPolarity_1,OCNIdleState_1,Pulse-PWM Generation1 CH1 CH1N,Period,Prescaler
 SH.ADCx_IN2.0=ADC1_IN2,IN2
 RCC.PLLCLKFreq_Value=48000000
+PC12.Signal=GPIO_Output
 PC5.Locked=true
 PB6.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_TIM4_Init-TIM4-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true,11-MX_TIM8_Init-TIM8-false-HAL-true
 PC0.GPIOParameters=GPIO_Label
 PC0.GPIO_Label=LCD_DB4
+PC6.GPIO_Label=LCD_RW
 PC3.Locked=true
 PA3.GPIOParameters=GPIO_Label
+PD2.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 RCC.ADCFreqValue=6000000
 PA6.GPIO_Label=BPM
 PB0.GPIO_Label=IE
 PB6.GPIO_Label=MODE
 TIM2.EncoderMode=TIM_ENCODERMODE_TI12
 PD2.Locked=true
-PD2.GPIOParameters=GPIO_Label
+PD2.GPIOParameters=GPIO_Speed,GPIO_Label
 SH.S_TIM1_CH1.ConfNb=1
-SH.S_TIM4_CH4.ConfNb=1
 PC1.Locked=true
 PB13.GPIO_Label=MOTOR_N
 PB7.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
@@ -130,7 +133,7 @@ ProjectManager.ProjectName=Emergency_Ventilator
 RCC.PLLMCOFreq_Value=24000000
 PB7.GPIO_Label=LIMIT_SWITCH
 Mcu.Package=LQFP64
-PB9.Signal=S_TIM4_CH4
+PB9.Signal=GPIO_Output
 PB1.Signal=ADCx_IN9
 PA6.Signal=ADCx_IN6
 ADC1.EnableInjectedConversion=DISABLE
@@ -147,7 +150,6 @@ ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_239CYCLES_5
 PA5.GPIOParameters=GPIO_Label
 SH.ADCx_IN9.0=ADC2_IN9,IN9
 RCC.APB2CLKDivider=RCC_HCLK_DIV4
-PB9.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 ADC2.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_239CYCLES_5
 PB5.GPIO_Label=CONFIRM
 ADC2.NbrOfConversion=4
@@ -172,28 +174,27 @@ ADC2.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_9
 PA3.Signal=ADCx_IN3
 PB5.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
 PA6.GPIOParameters=GPIO_Label
-PB7.GPIO_PuPd=GPIO_PULLUP
+PB7.GPIO_PuPd=GPIO_NOPULL
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 SH.GPXTI5.0=GPIO_EXTI5
 ProjectManager.ProjectFileName=Emergency_Ventilator.ioc
-TIM4.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 Dma.ADC1.0.Instance=DMA1_Channel1
 PB8.GPIOParameters=GPIO_PuPd,GPIO_Label
 TIM3.CounterMode=TIM_COUNTERMODE_UP
 PD1-OSC_OUT.Mode=HSE-External-Oscillator
 PB9.GPIO_Label=ALARM
 ADC1.Channel-4\#ChannelRegularConversion=ADC_CHANNEL_4
-Mcu.PinsNb=34
+Mcu.PinsNb=36
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 ProjectManager.NoMain=false
 SH.ADCx_IN6.0=ADC2_IN6,IN6
 ADC1.IPParameters=Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,NbrOfConversionFlag,master,ContinuousConvMode,NbrOfConversion,ExternalTrigConv,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,EnableInjectedConversion
-SH.S_TIM4_CH4.0=TIM4_CH4
 ADC2.Rank-3\#ChannelRegularConversion=4
-PB6.GPIO_PuPd=GPIO_PULLUP
-PB8.GPIO_PuPd=GPIO_PULLUP
+PB6.GPIO_PuPd=GPIO_NOPULL
+PB8.GPIO_PuPd=GPIO_PULLDOWN
 PC2.Signal=GPIO_Output
 PC4.Signal=GPIO_Output
+PC6.Signal=GPIO_Output
 ProjectManager.DefaultFWLocation=true
 TIM1.Channel-PWM\ Generation1\ CH1\ CH1N=TIM_CHANNEL_1
 PD0-OSC_IN.Signal=RCC_OSC_IN
@@ -209,9 +210,10 @@ PA0-WKUP.GPIO_Label=ENCODER_A
 PA0-WKUP.Signal=S_TIM2_CH1_ETR
 TIM1.ClockDivision=TIM_CLOCKDIVISION_DIV1
 PA0-WKUP.Locked=true
-PB9.GPIOParameters=GPIO_Speed,GPIO_Label
+PB9.GPIOParameters=GPIO_Label
 PC3.GPIOParameters=GPIO_Label
 SH.GPXTI6.0=GPIO_EXTI6
+PC12.GPIOParameters=PinState,GPIO_Label
 PA13.Signal=SYS_JTMS-SWDIO
 SH.GPXTI6.ConfNb=1
 PB8.GPIO_Label=SILENCE
@@ -221,14 +223,16 @@ PA8.GPIO_Label=MOTOR_P
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1 CH1N
 PB11.Mode=I2C
 ADC2.ContinuousConvMode=DISABLE
+PC12.PinState=GPIO_PIN_SET
 VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 ProjectManager.TargetToolchain=Makefile
-TIM4.IPParameters=Period,AutoReloadPreload,Prescaler
+TIM4.IPParameters=Prescaler,Period
 SH.ADCx_IN7.0=ADC2_IN7,IN7
 Dma.ADC1.0.Mode=DMA_CIRCULAR
 PB7.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,ExternalTrigConv,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,NbrOfConversion
 PC5.GPIOParameters=GPIO_Label
+PC6.Locked=true
 Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
 SH.S_TIM2_CH2.ConfNb=1
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
@@ -253,17 +257,19 @@ RCC.VCOOutput2Freq_Value=8000000
 Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 RCC.APB2Freq_Value=12000000
 MxCube.Version=5.6.0
+Mcu.Pin35=VP_TIM4_VS_ClockSourceINT
 SH.ADCx_IN2.ConfNb=1
 PC2.GPIOParameters=GPIO_Label
-Mcu.Pin30=VP_SYS_VS_Systick
+Mcu.Pin30=PB8
 PC1.GPIO_Label=LCD_DB5
 PA1.GPIO_Label=ENCODER_B
 VP_SYS_VS_Systick.Mode=SysTick
-Mcu.Pin33=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin33=VP_TIM1_VS_ClockSourceINT
 TIM3.IPParameters=Prescaler,Period,AutoReloadPreload,CounterMode
-Mcu.Pin31=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin34=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin31=PB9
 SH.ADCx_IN4.0=ADC1_IN4,IN4
-Mcu.Pin32=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin32=VP_SYS_VS_Systick
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA4.GPIOParameters=GPIO_Label
 ADC2.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_239CYCLES_5
@@ -274,31 +280,31 @@ ProjectManager.FreePins=false
 RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,I2S2Freq_Value,I2S3Freq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,SDIOFreq_Value,SDIOHCLKDiv2FreqValue,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,TimSys_Div,USBFreq_Value,VCOOutput2Freq_Value
 ProjectManager.AskForMigrate=true
 Mcu.Name=STM32F103R(C-D-E)Tx
-Mcu.Pin26=PB6
-Mcu.Pin27=PB7
+Mcu.Pin26=PD2
+Mcu.Pin27=PB5
 PA2.Signal=ADCx_IN2
-Mcu.Pin24=PD2
+Mcu.Pin24=PA14
 ProjectManager.UnderRoot=false
-Mcu.Pin25=PB5
+Mcu.Pin25=PC12
 Mcu.IP8=TIM2
 ADC1.ExternalTrigConv=ADC_SOFTWARE_START
 Mcu.IP9=TIM3
-Mcu.Pin28=PB8
+Mcu.Pin28=PB6
 Mcu.IP6=SYS
-Mcu.Pin29=PB9
+Mcu.Pin29=PB7
 Mcu.IP7=TIM1
 ProjectManager.CoupleFile=false
 PA4.Signal=ADCx_IN4
 RCC.SYSCLKFreq_VALUE=48000000
 PB5.Signal=GPXTI5
-Mcu.Pin22=PA13
-Mcu.Pin23=PA14
+Mcu.Pin22=PA8
+Mcu.Pin23=PA13
 RCC.TimSysFreq_Value=6000000
 PA1.Locked=true
 PA7.GPIO_Label=TIDAL
 Mcu.Pin20=PB13
 ADC1.master=1
-Mcu.Pin21=PA8
+Mcu.Pin21=PC6
 PA5.GPIO_Label=MOTOR_LIS
 ADC1.Rank-3\#ChannelRegularConversion=2
 ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_13CYCLES_5
@@ -306,9 +312,10 @@ ADC2.NbrOfConversionFlag=1
 NVIC.ForceEnableDMAVector=false
 KeepUserPlacement=false
 PC5.GPIO_Label=LCD_E
-PB5.GPIO_PuPd=GPIO_PULLUP
+PB5.GPIO_PuPd=GPIO_PULLDOWN
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA13.Locked=true
+PC12.GPIO_Label=LED
 ProjectManager.CompilerOptimize=6
 SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Encoder_Interface
 NVIC.EXTI9_5_IRQn=true\:0\:2\:true\:false\:true\:true\:false
@@ -320,6 +327,7 @@ NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 Mcu.Pin16=PB0
 Mcu.Pin13=PA7
 Mcu.Pin14=PC4
+PC6.GPIOParameters=GPIO_Label
 Mcu.Pin19=PB11
 ADC1.SamplingTime-5\#ChannelRegularConversion=ADC_SAMPLETIME_13CYCLES_5
 ProjectManager.ComputerToolchain=false
