--- a/Emergency_Ventilator.ioc
+++ b/Emergency_Ventilator.ioc
@@ -3,7 +3,6 @@ Mcu.Family=STM32F1
 ProjectManager.MainLocation=Core/Src
 NVIC.ADC1_2_IRQn=true\:0\:1\:false\:false\:true\:true\:false
 RCC.MCOFreq_Value=48000000
-PB13.GPIOParameters=GPIO_Speed,GPIO_Label
 ADC2.ExternalTrigConv=ADC_SOFTWARE_START
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F103RCTx
@@ -12,14 +11,14 @@ PB10.Mode=I2C
 ADC1.ContinuousConvMode=ENABLE
 ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_6
 PC12.Locked=true
-TIM1.Pulse-PWM\ Generation1\ CH1\ CH1N=600
-TIM1.IPParameters=Channel-PWM Generation1 CH1 CH1N,ClockDivision,AutomaticOutput,DeadTime,OCNPolarity_1,OCNIdleState_1,Pulse-PWM Generation1 CH1 CH1N,Period,Prescaler
+TIM1.IPParameters=ClockDivision,AutomaticOutput,Period,Prescaler,Channel-PWM Generation1 CH1,Channel-Output Compare2 CH2
 SH.ADCx_IN2.0=ADC1_IN2,IN2
 RCC.PLLCLKFreq_Value=48000000
 PC12.Signal=GPIO_Output
 PC5.Locked=true
 PB6.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_TIM4_Init-TIM4-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true,11-MX_TIM8_Init-TIM8-false-HAL-true
+PA9.GPIOParameters=GPIO_Speed,GPIO_Label
 PC0.GPIOParameters=GPIO_Label
 PC0.GPIO_Label=LCD_DB4
 PC6.GPIO_Label=LCD_RW
@@ -35,10 +34,8 @@ PD2.Locked=true
 PD2.GPIOParameters=GPIO_Speed,GPIO_Label
 SH.S_TIM1_CH1.ConfNb=1
 PC1.Locked=true
-PB13.GPIO_Label=MOTOR_N
 PB7.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PB11.Signal=I2C2_SDA
-PB13.Signal=TIM1_CH1N
 PA2.GPIOParameters=GPIO_Label
 PinOutPanel.RotationAngle=0
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
@@ -56,6 +53,7 @@ Mcu.IP3=I2C2
 RCC.SDIOHCLKDiv2FreqValue=24000000
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
+TIM1.Channel-Output\ Compare2\ CH2=TIM_CHANNEL_2
 TIM1.Prescaler=0
 Mcu.UserConstants=
 ADC1.Channel-5\#ChannelRegularConversion=ADC_CHANNEL_5
@@ -84,7 +82,6 @@ Mcu.Pin8=PA2
 Mcu.Pin9=PA3
 Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_WORD
 RCC.AHBFreq_Value=48000000
-PB13.Locked=true
 Mcu.Pin0=PD0-OSC_IN
 Mcu.Pin1=PD1-OSC_OUT
 GPIO.groupedBy=Group By Peripherals
@@ -110,11 +107,11 @@ ADC1.Rank-2\#ChannelRegularConversion=1
 PA1.GPIOParameters=GPIO_Label
 ProjectManager.BackupPrevious=false
 PC4.GPIO_Label=LCD_RS
+TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 PA14.Mode=Serial_Wire
 TIM3.Prescaler=11
 PB1.GPIO_Label=THRESHOLD
 Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
-TIM1.DeadTime=10
 File.Version=6
 SH.ADCx_IN8.0=ADC2_IN8,IN8
 PB7.Signal=GPXTI7
@@ -160,7 +157,6 @@ ADC2.Rank-2\#ChannelRegularConversion=3
 PC5.Signal=GPIO_Output
 SH.ADCx_IN9.ConfNb=1
 TIM1.Period=1199
-PB13.Mode=PWM Generation1 CH1 CH1N
 ADC2.Rank-0\#ChannelRegularConversion=1
 Dma.Request0=ADC1
 PA4.GPIO_Label=MOTOR_RIS
@@ -190,13 +186,13 @@ ProjectManager.NoMain=false
 SH.ADCx_IN6.0=ADC2_IN6,IN6
 ADC1.IPParameters=Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,NbrOfConversionFlag,master,ContinuousConvMode,NbrOfConversion,ExternalTrigConv,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,EnableInjectedConversion
 ADC2.Rank-3\#ChannelRegularConversion=4
+PA9.GPIO_Label=MOTOR_N
 PB6.GPIO_PuPd=GPIO_NOPULL
 PB8.GPIO_PuPd=GPIO_PULLDOWN
 PC2.Signal=GPIO_Output
 PC4.Signal=GPIO_Output
 PC6.Signal=GPIO_Output
 ProjectManager.DefaultFWLocation=true
-TIM1.Channel-PWM\ Generation1\ CH1\ CH1N=TIM_CHANNEL_1
 PD0-OSC_IN.Signal=RCC_OSC_IN
 ProjectManager.DeletePrevious=true
 PC0.Signal=GPIO_Output
@@ -220,7 +216,7 @@ PB8.GPIO_Label=SILENCE
 SH.S_TIM2_CH2.0=TIM2_CH2,Encoder_Interface
 Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
 PA8.GPIO_Label=MOTOR_P
-SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1 CH1N
+SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
 PB11.Mode=I2C
 ADC2.ContinuousConvMode=DISABLE
 PC12.PinState=GPIO_PIN_SET
@@ -234,9 +230,9 @@ ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConv
 PC5.GPIOParameters=GPIO_Label
 PC6.Locked=true
 Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
+PA9.Signal=S_TIM1_CH2
 SH.S_TIM2_CH2.ConfNb=1
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
-PB13.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB5.Locked=true
 PB9.Locked=true
 PC2.Locked=true
@@ -244,19 +240,19 @@ RCC.USBFreq_Value=48000000
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 TIM4.Prescaler=23
 PA1.Signal=S_TIM2_CH2
+SH.S_TIM1_CH2.ConfNb=1
 PD0-OSC_IN.Mode=HSE-External-Oscillator
 PB10.Signal=I2C2_SCL
 PA5.Signal=ADCx_IN5
 board=custom
-TIM1.OCNPolarity_1=TIM_OCNPOLARITY_HIGH
 ProjectManager.LastFirmware=true
 ADC2.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_8
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-TIM1.OCNIdleState_1=TIM_OCNIDLESTATE_RESET
 RCC.VCOOutput2Freq_Value=8000000
 Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 RCC.APB2Freq_Value=12000000
 MxCube.Version=5.6.0
+SH.S_TIM1_CH2.0=TIM1_CH2,Output Compare2 CH2
 Mcu.Pin35=VP_TIM4_VS_ClockSourceINT
 SH.ADCx_IN2.ConfNb=1
 PC2.GPIOParameters=GPIO_Label
@@ -270,6 +266,7 @@ Mcu.Pin34=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin31=PB9
 SH.ADCx_IN4.0=ADC1_IN4,IN4
 Mcu.Pin32=VP_SYS_VS_Systick
+PA9.Locked=true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA4.GPIOParameters=GPIO_Label
 ADC2.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_239CYCLES_5
@@ -297,14 +294,14 @@ ProjectManager.CoupleFile=false
 PA4.Signal=ADCx_IN4
 RCC.SYSCLKFreq_VALUE=48000000
 PB5.Signal=GPXTI5
-Mcu.Pin22=PA8
+Mcu.Pin22=PA9
 Mcu.Pin23=PA13
 RCC.TimSysFreq_Value=6000000
 PA1.Locked=true
 PA7.GPIO_Label=TIDAL
-Mcu.Pin20=PB13
+Mcu.Pin20=PC6
 ADC1.master=1
-Mcu.Pin21=PC6
+Mcu.Pin21=PA8
 PA5.GPIO_Label=MOTOR_LIS
 ADC1.Rank-3\#ChannelRegularConversion=2
 ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_13CYCLES_5
@@ -342,6 +339,7 @@ Mcu.Pin12=PA6
 Mcu.Pin10=PA4
 PB7.Locked=true
 ADC2.Rank-1\#ChannelRegularConversion=2
+PA9.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB8.Signal=GPXTI8
 PC3.GPIO_Label=LCD_DB7
 SH.ADCx_IN5.ConfNb=1
